--- a/Tpl/Admin/Default/Role/addRole.html
+++ b/Tpl/Admin/Default/Role/addRole.html
@@ -10,7 +10,7 @@
         <form action="{:U('Admin/Role/doAdd')}" method="post" id="doEditAdmin" class="formvalidate">
             <table class="list" cellpadding="0" cellspacing="1" border="0">
                 <tr>
-                    <td class="name">
+                    <td class="name" width="150">
                         <label class="validation"><span class="spanMsg">*</span>角色名称:</label>
                     </td>
                     <td>
