--- a/Tpl/Admin/Default/System/pageList.html
+++ b/Tpl/Admin/Default/System/pageList.html
@@ -34,7 +34,7 @@
                 </if>
                 </td>
                 <td class="align-center">
-                    <img src="__PUBLIC__/{$vo.u_photo|default='__PUBLIC__/Admin/images/avatar.png'}" width="44" height="44" />
+                    <img src="__PUBLIC__/{$vo.u_photo|default='/Admin/images/avatar.png'}" width="44" height="44" />
                 </td>
                 <td class="align-center">{$vo.u_name}</td>
 
