--- a/branches/2.1/Tpl/Admin/Default/RoleNav/pageList.html
+++ b/branches/2.1/Tpl/Admin/Default/RoleNav/pageList.html
@@ -44,7 +44,8 @@
             </empty>
             </tbody>
         </table>
-        <ul class="pagination">
+        <div class="pagination">
+            <ul>
             {$page}
             <select name="pageall" onChange="window.location.href=this.value">
                 <option value='{:U("Admin/RoleNav/pageList","pageall=1")}' <if condition="$filter.pageall eq '1'">selected="selected"</if>>1条/页</option>
@@ -57,7 +58,7 @@
                 <option value='{:U("Admin/RoleNav/pageList","pageall=500")}'<if condition="$filter.pageall eq '500'">selected="selected"</if>>500条/页</option>
             </select>
         </ul>
-
+        </div>
         <div style="clear: both;"></div>
     </div>
 
