--- a/branches/2.1/Tpl/Admin/Default/Common/incMenu.html
+++ b/branches/2.1/Tpl/Admin/Default/Common/incMenu.html
@@ -1,6 +1,6 @@
 <div id="sliderNavBox" class="sliderNavBox">
     <div id="mainMenu" class="main-menu">
-        <ul id="sort_dashboard" style="display: block;">
+        <ul id="sort_menu" style="display: block;">
             <li>
                 <dl>
                     <dd>
@@ -12,16 +12,16 @@
                                 </li>
                                 <volist name="menu.nodes" id="me">
                                     <li nc_type='{$menu.name}'>
-                                        <a href="{:U($me['module'].'/'.$me['action'])}" name="item_sharesetting" id="item_sharesetting">{$me.action_name}</a>
+                                        <a href="javascript:void(0);" <if condition="($Think.cookie.module eq $me[module]) && $Think.cookie.action eq $me[action]">class='selected'</if> onClick="openItem('{$me.nav_id},{$me.module},{$me.action}');" name="item_{$me.module}_{$me.action}" id="item_{$me.module}_{$me.action}">{$me.action_name}</a>
                                     </li>
                                 </volist>
                             </volist>
                             <empty name="menus">
                                 <li nc_type=''>
-                                    <a href='{:U("Index/index")}' name="item_welcome" id="item_welcome">欢迎页面</a>
+                                    <a href='javascript:void(0);' <if condition="($Think.cookie.module eq 'Index') && $Think.cookie.action eq 'index'">class='selected'</if> onClick="openItem('0,Index,index');" name="item_welcome" id="item_welcome">欢迎页面</a>
                                 </li>
                                 <li nc_type=''>
-                                    <a href="JavaScript:void(0);" name="item_aboutus" id="item_aboutus">关于我们</a>
+                                    <a href="JavaScript:void(0);" onClick="openItem('0,Index,index');" name="item_aboutus" id="item_aboutus">关于我们</a>
                                 </li>
                             </empty>
                         </ol>
