--- a/Tpl/Admin/Default/Index/index.html
+++ b/Tpl/Admin/Default/Index/index.html
@@ -1,98 +1,146 @@
-<td valign="top" width="100%">
-    <div class="page">
-        <div class="item-title">
-            <h3></h3>
+<div class="page_function">
+    <div class="info">
+        <h3>管理首页</h3>
+        <small><font color="#333">欢迎使用 HUICMS网站管理系统</small> </font></div>
+    <div class="tip">用户名：<strong>{$Think.session.admin_name}</strong> &nbsp;&nbsp;登陆次数：{$Think.session.u_countlog}&nbsp;&nbsp;您等当前登录时间为：{$Think.session.last_time}&nbsp;&nbsp;登录IP为: <php>echo $_SESSION['ip'].":".$_SERVER['SERVER_PORT'];</php></div>
+</div>
+<div class="page">
+    <div class="page_main">
+        <h3>环境信息</h3>
+        <div class="page_table">
+            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                    <td width="120" class="left">操作系统: </td>
+                    <td width="250" class="right"><php>echo PHP_OS;</php></td>
+                    <td width="120" class="left">服务器地址: </td>
+                    <td class="right"><php>echo $_SERVER['SERVER_ADDR'].":".$_SERVER['SERVER_PORT'];</php></td>
+                </tr>
+                <tr>
+                    <td width="120" class="left">获取框架版本号: </td>
+                    <td width="250" class="right"><a target="_blank" href="http://www.thinkphp.cn/">{$Think.version}</a></td>
+                    <td width="120" class="left">jQuery Version: </td>
+                    <td class="right"><a target="_blank" href="http://www.jquery.com/"><script type="text/javascript">document.write($.fn.jquery)</script></a></td>
+                </tr>
+                <tr>
+                    <td width="120" class="left">GD 库: </td>
+                    <td width="250" class="right">
+                        <php>
+                            if(function_exists("imageline")==1){
+                                $gd = gd_info();
+                                echo $gd['GD Version'];
+                                //echo "<font color=green><b>".$gd['GD Version']."</b></font>";
+                            } else {
+                                echo '<font color=red><b>×</b></font>';
+                            }
+                        </php>
+                    </td>
+                    <td width="120" class="left">MySQL 版本: </td>
+                    <td class="right">5.5.29</td>
+                </tr>
+                <tr>
+                    <td class="left">服务器时间: </td>
+                    <td id="timer"><php>echo date("Y-m-d H:i:s",time());</php></td>
+                    <td class="left">WEB服务器: </td>
+                    <td><php>echo $_SERVER['SERVER_SOFTWARE'];</php></td>
+                </tr>
+                <tr>
+                    <td class="left">服务器语言: </td>
+                    <td><php>echo getenv("HTTP_ACCEPT_LANGUAGE");</php></td>
+                    <td class="left">PHP版本: </td>
+                    <td><php>echo PHP_VERSION;</php></td>
+                </tr>
+                <tr>
+                    <td class="left">图像处理支持: </td>
+                    <td>
+                <php> 
+                    if(function_exists("imageline")==1){
+                        echo '<font color=green><b>√</b></font>';
+                    } else {
+                        echo '<font color=red><b>×</b></font>';
+                    } 
+                </php>
+                </td>
+                <td class="left">Session支持: </td>
+                <td>
+                <php> 
+                    if(function_exists("session_start")==1){
+                    echo '<font color=green><b>√</b></font>';
+                    } else {
+                    echo '<font color=red><b>×</b></font>';
+                    } 
+                </php>
+                </td>
+                </tr>
+                <tr>
+                    <td class="left">脚本运行内存: </td>
+                    <td><php> echo get_cfg_var("memory_limit")?get_cfg_var("memory_limit"):"无" ; </php></td>
+                <td class="left">上传大小限制: </td>
+                <td><php> echo get_cfg_var("upload_max_filesize")?get_cfg_var("upload_max_filesize"):"不允许上传文件" ; </php></td>
+                </tr>
+                <tr>
+                    <td class="left">POST提交限制: </td>
+                    <td><php> echo get_cfg_var("post_max_size") ; </php></td>
+                <td class="left">脚本超时时间: </td>
+                <td><php> echo get_cfg_var("max_execution_time") ; </php> s</td>
+                </tr>
+                <tr>
+                    <td class="left">被屏蔽的函数: </td>
+                    <td colspan="3"><php> echo get_cfg_var("disable_functions")?get_cfg_var("disable_functions"):"无" ; </php></td>
+                </tr>
+            </table>
         </div>
-        <table class="table tb-type2">
-            <thead class="thead">
-                <tr class="space">
-                    <th colspan="10">一周动态</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr style="background-color: rgb(255, 255, 255); background-position: initial initial; background-repeat: initial initial;">
-                    <td class="w12"></td>
-                    <td class="w108"><strong>新增会员数:</strong></td>
-                    <td class="w25pre"><span id="statistics_week_add_member">22</span></td>
-                    <td class="w120"><strong>新增店铺数/申请数:</strong></td>
-                    <td><span id="statistics_week_add_store">14</span>/<span id="statistics_week_add_audit_store">2</span></td>
-                </tr>
-                <tr style="background-color: rgb(255, 255, 255); background-position: initial initial; background-repeat: initial initial;">
-                    <td></td>
-                    <td><strong>新增商品数:</strong></td>
-                    <td><span id="statistics_week_add_product">3</span></td>
-                    <td><strong>新增订单数:</strong></td>
-                    <td><span id="statistics_week_add_order_num">10</span></td>
-                </tr>
-            </tbody>
-        </table>
-        <table class="table tb-type2" style="margin-top:0px">
-            <thead class="thead">
-                <tr class="space">
-                    <th colspan="10">统计信息</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr style="background-color: rgb(255, 255, 255); background-position: initial initial; background-repeat: initial initial;">
-                    <td class="w12"></td>
-                    <td class="w108"><strong>会员总数:</strong></td>
-                    <td class="w25pre"><span id="statistics_member">963</span></td>
-                    <td class="w120"><strong>店铺总数/申请总数:</strong></td>
-                    <td><span id="statistics_store">447</span>/<span id="statistics_audit_store">17</span></td>
+        <h3>程序信息</h3>
+        <div class="page_table">
+            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                    <td width="120" class="left">程序版本: </td>
+                    <td width="250">HUICMS 正式版 1.1</td>
+                    <td width="120" class="left">官方主页: </td>
+                    <td><a href="http://www.huicms.cn" target="_blank">www.huicms.cn</a></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td><strong>商品总数:</strong></td>
-                    <td><span id="statistics_goods">231</span></td>
-                    <td><strong>订单总数:</strong></td>
-                    <td><span id="statistics_order">431</span></td>
+                    <td width="120" class="left">开发团队: </td>
+                    <td width="250">HUICMS工作室</td>
+                    <td width="120" class="left">QQ群: </td>
+                    <td>233931030</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td><strong>订单总金额:</strong></td>
-                    <td><span id="statistics_order_amount">614382.81</span></td>
-                    <td></td>
-                    <td></td>
+                    <td width="120" class="left">交流支持: </td>
+                    <td width="250"><a href="http://bbs.huicms.cn/" target="_blank">bbs.huicms.cn</a> </td>
+                    <td width="120" class="left">帮助手册: </td>
+                    <td><a href="http://bbs.huicms.cn/help/" target="_blank">bbs.huicms.cn/help</a></td>
                 </tr>
-            </tbody> <tfoot>
-                <tr class="tfoot">
-                    <td colspan="10"></td>
-                </tr>
-            </tfoot>
-        </table>
-        <table class="table tb-type2">
-            <thead class="thead">
-                <tr class="space">
-                    <th colspan="10">系统信息</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="w12"></td>
-                    <td class="w108"><strong>服务器操作系统:</strong></td>
-                    <td class="w25pre">Linux</td>
-                    <td class="w120"><strong>WEB 服务器:</strong></td>
-                    <td>Apache/2.2.15 (CentOS)</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><strong>PHP 版本:</strong></td>
-                    <td>5.3.3</td>
-                    <td><strong>MYSQL 版本:</strong></td>
-                    <td>5.1.52</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><strong>ShopNC 版本:</strong></td>
-                    <td>20130227</td>
-                    <td><strong>安装日期:</strong></td>
-                    <td>2012-09-26</td>
-                </tr>
-            </tbody> <tfoot>
-                <tr class="tfoot">
-                    <td colspan="10"></td>
-                </tr>
-            </tfoot>
-        </table>
+
+
+            </table>
+        </div>
     </div>
-</td>
+</div>
+<script>
+    $(document).ready(function(){
+        setInterval(showTime, 1000);
+        function timer(obj,txt){
+            obj.text(txt);
+        }
+        function showTime(){                                
+            var today = new Date();
+            var weekday=new Array(7)
+            weekday[1]="星期一"
+            weekday[2]="星期二"
+            weekday[3]="星期三"
+            weekday[4]="星期四"
+            weekday[5]="星期五"
+            weekday[6]="星期六"
+            weekday[7]="星期日"                                        
+            var y=today.getFullYear();
+            var month=today.getMonth();
+            var td=today.getDate();
+            var d=weekday[today.getDay()];
+            var h=today.getHours();
+            var m=today.getMinutes();
+            var s=today.getSeconds(); 
+            str = y+"年"+month+"月"+td+"日"+" "+d+" "+h+"时"+m+"分"+s+"秒";
+            timer($("#timer"),str);
+        } 
+    });
+</script>
