--- a/Tpl/Admin/Default/User/pageLogin.html
+++ b/Tpl/Admin/Default/User/pageLogin.html
@@ -23,7 +23,7 @@
                 	<input type="password" class="logininput" name="passwd" required/>
                     <p>{$Think.lang.CODE}:</p>
                     <span class="verify">
-                        <input type="number" class="logincode" name="code" id="code" required/>
+                        <input type="text" class="logincode" name="code" id="code" required/>
                         <img id="verify" src="{:U('Admin/User/verify')}" class="changeVerify" style="cursor: pointer;" title="{$Think.lang.CLICKUPDATECODE}" />
                     </span>
                     
