--- a/Tpl/Admin/Default/Common/incTop.html
+++ b/Tpl/Admin/Default/Common/incTop.html
@@ -1,7 +1,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="Content-Type" content="text/html;" charset="UTF-8">
-    <title>Huicms</title>
+    <title>{$Think.session.navname|default="管理中心"}--Huicms内容管理系统</title>
     <link href="__PUBLIC__/Admin/css/skin_1.css" rel="stylesheet" type="text/css" id="cssfile">
     <script type="text/javascript" src="__PUBLIC__/Lib/jquery/js/jquery-1.8.3.js"></script>
     <!--[if IE]>
